Avoid shrinking keywords on mobile

--- a/input/style.css
+++ b/input/style.css
@@ -16,7 +16,6 @@ h1, h2, p {
 .keyword {
     color: #0e52d1;
     position: relative;
-    display: inline-block;
     border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 
